tf_files/aws/modules/vpc/cloud.tf
module "squid_proxy" {
  source               = "../squid"
  csoc_cidr            = "${var.csoc_cidr}"
  env_vpc_name         = "${var.vpc_name}"
  env_public_subnet_id = "${aws_subnet.public.id}"
  env_vpc_cidr         = "${aws_vpc.main.cidr_block}"
  env_vpc_id           = "${aws_vpc.main.id}"
  ssh_key_name         = "${var.ssh_key_name}"
  env_instance_profile = "${aws_iam_instance_profile.cluster_logging_cloudwatch.name}"
  env_log_group        = "${aws_cloudwatch_log_group.main_log_group.name}"
}

resource "aws_vpc" "main" {
  cidr_block           = "172.${var.vpc_octet2}.${var.vpc_octet3}.0/20"
  enable_dns_hostnames = true

  tags {
    Name         = "${var.vpc_name}"
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

data "aws_vpc_endpoint_service" "s3" {
  service = "s3"
}

resource "aws_vpc_endpoint" "private-s3" {
  vpc_id = "${aws_vpc.main.id}"

  #service_name = "com.amazonaws.us-east-1.s3"
  service_name    = "${data.aws_vpc_endpoint_service.s3.service_name}"
  route_table_ids = ["${aws_route_table.private_user.id}"]
}

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = "${aws_eip.nat_gw.id}"
  subnet_id     = "${aws_subnet.public.id}"

  tags {
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  route {
    #from the commons vpc to the csoc vpc via the peering connection
    cidr_block                = "${var.csoc_cidr}"
    vpc_peering_connection_id = "${aws_vpc_peering_connection.vpcpeering.id}"
  }

  tags {
    Name         = "main"
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

resource "aws_eip" "nat_gw" {
  vpc = true
}

resource "aws_route_table" "private_user" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block  = "0.0.0.0/0"
    instance_id = "${module.squid_proxy.squid_id}"
    #nat_gateway_id = "${aws_nat_gateway.nat_gw.id}"
  }

  route {
    # cloudwatch logs route
    cidr_block     = "54.224.0.0/12"
    nat_gateway_id = "${aws_nat_gateway.nat_gw.id}"
  }

  route {
    #from the commons vpc to the csoc vpc via the peering connection
    cidr_block                = "${var.csoc_cidr}"
    vpc_peering_connection_id = "${aws_vpc_peering_connection.vpcpeering.id}"
  }

  tags {
    Name         = "private_user"
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

resource "aws_default_route_table" "default" {
  default_route_table_id = "${aws_vpc.main.default_route_table_id}"

  route {
    #from the commons vpc to the csoc vpc via the peering connection
    cidr_block                = "${var.csoc_cidr}"
    vpc_peering_connection_id = "${aws_vpc_peering_connection.vpcpeering.id}"
  }

  tags {
    Name = "default table"
  }
}

resource "aws_main_route_table_association" "default" {
  vpc_id         = "${aws_vpc.main.id}"
  route_table_id = "${aws_default_route_table.default.id}"
}

resource "aws_route_table_association" "public" {
  subnet_id      = "${aws_subnet.public.id}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table_association" "private_user" {
  subnet_id      = "${aws_subnet.private_user.id}"
  route_table_id = "${aws_route_table.private_user.id}"
}

resource "aws_subnet" "public" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "172.${var.vpc_octet2}.${var.vpc_octet3 + 0}.0/24"
  map_public_ip_on_launch = true

  # kube_ subnets are in availability zone [0], so put this in [1]
  availability_zone = "${data.aws_availability_zones.available.names[1]}"

  tags = "${map("Name", "public", "Organization", "Basic Service", "Environment", var.vpc_name)}"

  lifecycle {
    # allow user to change tags interactively - ex - new kube-aws cluster
    ignore_changes = ["tags", "availability_zone"]
  }
}

resource "aws_subnet" "private_user" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "172.${var.vpc_octet2}.${var.vpc_octet3 + 1}.0/24"
  map_public_ip_on_launch = false

  # kube_ subnets are in availability zone [0], so put this in [1]
  availability_zone = "${data.aws_availability_zones.available.names[1]}"

  tags {
    Name         = "private_user"
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }

  lifecycle {
    # allow user to change tags interactively - ex - new kube-aws cluster
    ignore_changes = ["tags", "availability_zone"]
  }
}

#
# The need is to keep logs for no longer than 5 years so 
# we create the group before it is created automatically without 
# the retention period
#
resource "aws_cloudwatch_log_group" "main_log_group" {
  name              = "${var.vpc_name}"
  retention_in_days = "1827"

  tags {
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

#This needs vars from other branches, so hopefully will work just fine when they are merge
resource "aws_cloudwatch_log_subscription_filter" "csoc_subscription" {
  name            = "${var.vpc_name}_subscription"
  destination_arn = "arn:aws:logs:${data.aws_region.current.name}:${var.csoc_account_id}:destination:${var.vpc_name}_logs_destination"
  log_group_name  = "${var.vpc_name}"
  filter_pattern  = ""
}

data "aws_ami" "public_login_ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu16-client-1.0.2-*"]
  }

  owners = ["${var.ami_account_id}"]
}

#
# This AMI is no longer used here, but is referenced in 
# tf_files/aws/user-vpc and tf_files/aws/commons.
# It's handy to have the encrypted AMI ready to use in a VPC I think.
#
resource "aws_ami_copy" "login_ami" {
  name              = "ub16-client-crypt-${var.vpc_name}-1.0.2"
  description       = "A copy of ubuntu16-client-1.0.2"
  source_ami_id     = "${data.aws_ami.public_login_ami.id}"
  source_ami_region = "us-east-1"
  encrypted         = true

  tags {
    Name = "login-${var.vpc_name}"
  }

  lifecycle {
    #
    # Do not force update when new ami becomes available.
    # We still need to improve our mechanism for tracking .ssh/authorized_keys
    # User can use 'terraform state taint' to trigger update.
    #
    ignore_changes = ["source_ami_id"]
  }
}

resource "aws_iam_role" "cluster_logging_cloudwatch" {
  name = "${var.vpc_name}_cluster_logging_cloudwatch"
  path = "/"

  assume_role_policy = <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Action": "sts:AssumeRole",
            "Principal": {
               "Service": "ec2.amazonaws.com"
            },
            "Effect": "Allow",
            "Sid": ""
        }
    ]
}
EOF
}

#
# This could go here or in the squid module. But squid may go away soon
# do not remove this
#
resource "aws_iam_role_policy" "cluster_logging_cloudwatch" {
  name   = "${var.vpc_name}_cluster_logging_cloudwatch"
  policy = "${data.aws_iam_policy_document.cluster_logging_cloudwatch.json}"
  role   = "${aws_iam_role.cluster_logging_cloudwatch.id}"
}

resource "aws_iam_instance_profile" "cluster_logging_cloudwatch" {
  name = "${var.vpc_name}_cluster_logging_cloudwatch"
  role = "${aws_iam_role.cluster_logging_cloudwatch.id}"
}

resource "aws_route53_zone" "main" {
  name    = "internal.io"
  comment = "internal dns server for ${var.vpc_name}"
  vpc_id  = "${aws_vpc.main.id}"

  tags {
    Environment  = "${var.vpc_name}"
    Organization = "Basic Service"
  }
}

resource "aws_route53_record" "squid" {
  zone_id = "${aws_route53_zone.main.zone_id}"
  name    = "cloud-proxy"
  type    = "A"
  ttl     = "300"
  records = ["${module.squid_proxy.squid_private_ip}"]
}

# this is for vpc peering
resource "aws_vpc_peering_connection" "vpcpeering" {
  peer_owner_id = "${var.csoc_account_id}"
  peer_vpc_id   = "${var.csoc_vpc_id}"
  vpc_id        = "${aws_vpc.main.id}"
  auto_accept   = true

  tags {
    Name = "VPC Peering between ${var.vpc_name} and csoc_main_vpc"
  }
}

## This is for endpoint service needed to acccess the squid nlb in CSOC VPC

resource "aws_vpc_endpoint" "squid-nlb" {
  vpc_id            = "${aws_vpc.main.id}"
  service_name      = "${var.squid-nlb-endpointservice-name}"
  vpc_endpoint_type = "Interface"

  security_group_ids = [
     "${aws_security_group.local.id}"
  ]
  # we need to supply it a subnet id ; so that it can create the dns name for the endpoint which is then added to the route53 for cloud-proxy
  subnet_ids          = ["${aws_subnet.private_user.id}"]
  private_dns_enabled = false
}

## 'raryatestnlbproxyv1' should be replaced with cloud-proxy at the time of merge
resource "aws_route53_record" "squid-nlb" {
  zone_id = "${aws_route53_zone.main.zone_id}"
  name    = "raryatestnlbproxyv1.${aws_route53_zone.main.name}"
  type    = "CNAME"
  ttl     = "300"
  records = ["${lookup(aws_vpc_endpoint.squid-nlb.dns_entry[0], "dns_name")}"]
}
